--- a/delivery/src/index.css
+++ b/delivery/src/index.css
@@ -2,15 +2,17 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
-  color: aliceblue;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 #root {
+}
+
+body {
   background-color: #242424;
-  height: 100vh;
+  color: aliceblue;
 }
 
 input[type="text"],
@@ -48,7 +50,6 @@ button:hover {
 .leaflet-container {
   height: 100%;
   width: 100%;
-  border-radius: 20px;
 }
 
 input[type="number"]::-webkit-inner-spin-button,
@@ -70,4 +71,33 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 label {
   font-size: 1.2rem;
+}
+
+.home-con {
+  width: 90%;
+  max-width: 950px;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  position: relative;
+}
+
+.ordrel {
+  background-color: #4d4c4c;
+  border-radius: 20px;
+  padding: 20px;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+a {
+  text-decoration: none;
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: aliceblue;
+}
+
+.active {
+  color: aqua;
 }
