--- a/front/src/index.css
+++ b/front/src/index.css
@@ -249,6 +249,19 @@ input[type="number"]::-webkit-outer-spin-button {
   padding: 5px;
 }
 
+.scroll-btns img {
+  transition: 0.2s;
+}
+
+.scroll-btns img:hover {
+  scale: 1.05;
+}
+
+.scroll-btns img:active {
+  scale: 0.98;
+  background-color: #c5c5c5;
+}
+
 .trk {
   color: #0969a1;
   background-color: #8acdec;
